Refactor link context menu code to avoid duplication.

Instead of two separate code paths for when the Desktop PWAs flag is
enabled/disabled, it's now a single code path that makes a few
behavioural changes depending on the status of that flag.

Bug: 907298
Change-Id: I6b449fd65390d631098b2bc58e6c1ea668d5fd41
Reviewed-on: https://chromium-review.googlesource.com/c/1345753
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Matt Giuca <mgiuca@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610323}
Former-commit-id: 67b3b7aaeb8340a19d677bc27738c6a59b13bced